crates/system/src/apps/snapshots/telmo_system__apps__draw__tests__force_quit_confirm.snap
---
source: crates/system/src/apps/draw.rs
expression: render(&app)
---

╭─ Force quit ─────────────────────────────────────────────────────────────── by memory ─╮
│   App                                                    Memory    CPU                 │
│ ▌ Telegram                                               380 MB     0%  not responding │
│   Zen                                                    1.9 GB    12%                 │
│   Slack                                                  870 MB     6%                 │
│   Spotify                                                640 MB     3%                 │
│   Messages                                               210 MB     0%                 │
│   Finder            ╭─ Force quit Telegram? ─────────────────────╮  1%                 │
│   Ghostty           │                                            │  2%                 │
│   Notes             │  Unsaved changes in it are lost.           │  0%                 │
│                     │                                            │                     │
│                     │  ↵ force quit   esc cancel                 │                     │
│                     ╰────────────────────────────────────────────╯                     │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯

 ↵ quit  K force quit  / search  esc back
