crates/system/src/apps/snapshots/telmo_system__apps__draw__tests__the_list_before_the_first_snapshot.snap
---
source: crates/system/src/apps/draw.rs
expression: render(&app)
---

╭─ Force quit ─────────────────────────────────────────────────────────────── by memory ─╮
│   App                                                    Memory    CPU                 │
│  Looking for apps…                                                                     │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯

 ↵ quit  K force quit  / search  esc back
